Compiler/exam/q1/y.output
Terminals unused in grammar

    C
    D
    E


Rules useless in parser due to conflicts

    5 Cn: ε


State 0 conflicts: 1 shift/reduce


Grammar

    0 $accept: Start $end

    1 Start: Conflict1

    2 Conflict1: Cn A
    3          | A

    4 Cn: B
    5   | ε


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    A (258) 2 3
    B (259) 4
    C (260)
    D (261)
    E (262)


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    Start (9)
        on left: 1
        on right: 0
    Conflict1 (10)
        on left: 2 3
        on right: 1
    Cn (11)
        on left: 4 5
        on right: 2


State 0

    0 $accept: • Start $end

    A  shift, and go to state 1
    B  shift, and go to state 2

    A  [reduce using rule 5 (Cn)]

    Start      go to state 3
    Conflict1  go to state 4
    Cn         go to state 5


State 1

    3 Conflict1: A •

    $default  reduce using rule 3 (Conflict1)


State 2

    4 Cn: B •

    $default  reduce using rule 4 (Cn)


State 3

    0 $accept: Start • $end

    $end  shift, and go to state 6


State 4

    1 Start: Conflict1 •

    $default  reduce using rule 1 (Start)


State 5

    2 Conflict1: Cn • A

    A  shift, and go to state 7


State 6

    0 $accept: Start $end •

    $default  accept


State 7

    2 Conflict1: Cn A •

    $default  reduce using rule 2 (Conflict1)
